# refbg

./: generate-wayland-sources.sh  meson.build
src/: align.c  align.h  base.c  base.h  gdb.c  gdb.h  helper.c  main.c  memory_arena.c  memory_arena.h  print.c  print.h  stb_sprintf.h  temporary_storage.c  temporary_storage.h  types.h
src/wayland/: libdecor.c  libdecor.h  libdecor_sym.h
